--- a/spotifyclone.html
+++ b/spotifyclone.html
@@ -232,7 +232,7 @@ svg{
 		<div class="box">
 			<center><h2>Spotify</h2></center>
 			
-			<p>Test </p>
+			<p>Another test</p>
 		</div>	
 	</main>
 	
